# sddf

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.zig  flake.nix  pancake_components.txt
benchmark/: benchmark.c  benchmark_kurt.c  idle.c
blk/components/: blk_components.mk  partitioning.c  virt.c
ci/: examples.sh
drivers/blk/sdmmc/: Cargo.toml  sdmmc_driver.mk
drivers/blk/sdmmc/sdmmc_hal/meson/: meson_gx_mmc.rs
drivers/blk/sdmmc/sdmmc_protocol/: sdmmc.rs
drivers/blk/sdmmc/src/: main.rs  sddf_helper.c
drivers/blk/sdmmc/src/sddf_blk/: mod.rs
examples/blk/: Makefile  blk.mk  debug.txt  pancake.config  pancake_c.config  pancake_config.mk
examples/echo_server/: Makefile  autobench.py  bench.s  broken_eth_driver.S  debug.txt  echo.h  echo.mk  eth_C.asm  eth_pnk.asm  lwip.c  maaxboard2_mq_out_pnk_opt_new_flags.txt  maaxboard2_mq_out_pnk_opt_new_flags_v2.txt  maaxboard2_mq_out_pnk_opt_new_flags_v3.txt  maaxboard2_mq_out_pnk_opt_v4.txt  maaxboard_out.txt  maaxboard_out_noglob_no_fence_pnk.txt  meta.py  newnewtest_clang.S  odroidc4-2_fix_fece.txt  odroidc4-2_mq_out_virt_rx_opt_cakeflags.txt  odroidc4-2_mq_out_virt_rx_opt_v3.txt  odroidc4-2_pnk_opt_fullstack_new_v1.txt  pancake.config  pancake.config.inline  pancake.config.maaxboard  pancake.config.odroidc4  pancake.config.star64  pancake_config.mk  patch_dwmac_riscv.py  tcp_echo_socket.c  test.S  test.asm  test.txt  test_pancake_matrix.py  udp_echo_socket.c
examples/ffi-bench/: Makefile  bench.🥞  client.c  ffi_bench.mk  meta.py  pancake.config  pancake_config.mk  test.txt
examples/i2c/: Makefile  debug.txt  i2c.mk  pancake.config  pancake_config.mk
examples/mmc/: mmc.mk
libco/: libco.mk
serial/components/mux_rx/: CMakeLists.txt
serial/components/mux_tx/: CMakeLists.txt
spi/: libspi.c
util/: cache.c  newlibc.c  pancake_ffi.c  putchar_debug.c  putchar_serial.c  util.mk  util.🥞
(+634 files in other folders)
