[package]
name = "sdmmc_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4-microkit = { git = "https://github.com/seL4/rust-sel4.git", rev = "5b9ebfd0a3a9805f28cc9222cd558e8d56a3919d" }
# Change it to based on 
# sdmmc_hal = { path = "sdmmc_hal/meson", features = ["sel4-microkit"] }
# sdmmc_protocol = { path = "sdmmc_protocol" }
sdmmc_hal = { features = ["sel4-microkit"], git = "https://github.com/Cheng-Li1/sdcard-emmc-rs", rev = "914ca8ff1f35e7bc501d7c099f53059a35ce81a9" }
sdmmc_protocol = { features = ["sel4-microkit"], git = "https://github.com/Cheng-Li1/sdcard-emmc-rs", rev = "914ca8ff1f35e7bc501d7c099f53059a35ce81a9" }

[build]
build = "build.rs"
